--- a/buoyspot.html
+++ b/buoyspot.html
@@ -266,11 +266,11 @@
 <section>
   <div class="container-fluid  home  mb-5 d-flex flex-column align-items-center justify-content-center">
   
-    <img src="Assets/images/Banner-Image/banner-img-14.png" class="m-0 p-0 w-100 position-absolute  banner-img  " alt="">
+    <img src="Assets/images/Banner-Image/BuoySPOT_banner.jpg" class="m-0 p-0 w-100 position-absolute  banner-img  " alt="">
   
   <!-- ======================== MAIN SUB DIV START ======================== -->
     <!-- ======================== BANNER START ======================== -->
-    <div class="container-fluid home d-flex flex-column align-items-center justify-content-center   pb-0">
+    <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center   pb-0">
       <h2 class="text-white mb-3 display-2 fw-bold">BuoySPOT<sup class="col-org">TM</sup> </h2>
       <h4 class="text-white  ">Home / BuoySPOT</h4>
     </div>
@@ -329,7 +329,7 @@
     <div class="col-lg-9 ps-lg-3 mt-lg-0 mt-2">
       <span></span>
       <!-- ========================  ======================== -->
-<img src="Assets/images/Service-Image/service-img-14.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
+<img src="Assets/images/Service-Image/buoySPOT_front_picutre.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
       <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5">
