--- a/callmatics.html
+++ b/callmatics.html
@@ -265,12 +265,12 @@
 
 <!-- ======================== MAIN 1 START ======================== -->
 <section>
-  <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-16.png" class="m-0 p-0 w-100 position-absolute banner-img  " alt="">
+  <div class="container-fluid home   d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/callmATICS_banner.jpg" class="m-0 p-0 w-100 position-absolute banner-img  " alt="">
 
   <!-- ======================== MAIN SUB DIV START ======================== -->
     <!-- ======================== BANNER START ======================== -->
-    <div class="container-fluid home d-flex flex-column align-items-center justify-content-center   pb-0">
+    <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center   pb-0">
       <h2 class="text-white mb-3 display-2 fw-bold">CallmATICS<sup class="col-org">TM</sup> </h2>
       <h4 class="text-white  ">Home / CallmATICS </h4>
     </div>
@@ -285,7 +285,7 @@
 <!-- ======================== MAIN 2 START ======================== -->
 
 <section>
-  <div class="container-fluid  over pb-5 px-2 d-flex flex-lg-row flex-column">
+  <div class="container-fluid  over pb-5  mt-5 px-2 d-flex flex-lg-row flex-column">
     <div class="col-lg-3 who p-2 sticky-element border-radious">
       <h3 class="text-white1 px-2 py-3">AI Product Solution</h3>
       <!-- ========================  ======================== -->
