--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -264,9 +264,9 @@
 
   <!-- ======================== MAIN 1 START ======================== -->
  <section>
-  <div class="container-fluid home mb-5 d-flex flex-column align-items-center justify-content-center">
-    <img src="Assets/images/Banner-Image/banner-img-22.png" class="m-0 p-0 w-100 position-absolute  banner-img" alt="">
-    <div class="container-fluid home d-flex flex-column align-items-center justify-content-center   pb-0">
+  <div class="container-fluid home  mb-5 d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/plannetScan_banner.jpg" class="m-0 p-0 w-100 position-absolute  banner-img" alt="">
+    <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center   pb-0">
       <h2 class="text-white mb-3 display-2 fw-bold">plannetScam<sup class="col-org">TM</sup> </h2>
       <h4 class="text-white  ">Home / plannetScam </h4>
     </div>
