--- a/index.html
+++ b/index.html
@@ -764,15 +764,15 @@
         <form class="mt-5" id="form">
           <div class="row g-3">
             <div class="col-md-6">
-              <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required>
+              <input type="text" class="form-control form-control1" id="firstName" maxlength="17" placeholder="First Name" required>
             </div>
             <div class="col-md-6">
-              <input type="text" class="form-control form-control1" id="lastName" placeholder="Last Name" required>
+              <input type="text" class="form-control form-control1" id="lastName" maxlength="17" placeholder="Last Name" required>
             </div>
 
 
             <div class="col-md-6">
-              <input type="email" class="form-control form-control1 " id="email" placeholder="Your Email" required>
+              <input type="email" class="form-control form-control1 " id="email" maxlength="17" placeholder="Your Email" required>
             </div>
             <div class="col-md-6 pt-2 ">
               <input id="phone" type="tel" class="mb-3 pt-1 col-12 mb-3 phonenum form-control1">
@@ -790,7 +790,7 @@
             </div>
             <div class="col-12">
               <textarea class="form-control form-control1" id="message" rows="4"
-                placeholder="Write your message here..."></textarea>
+                maxlength="17" placeholder="Write your message here..."></textarea>
             </div>
             <div class="col-12 text-center mb-5">
               <button type="submit" id="contact-form"
@@ -923,7 +923,7 @@
         <div class="col-lg-3 col-12 col-md-6 mb-4">
           <h3 class="mb-3 text-white1">Subscribe newsletter</h3>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username"
+            <input type="text" class="form-control" maxlength="17" placeholder="Email Address" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn bg text-white1" type="button">
