--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -275,7 +275,7 @@
         <div class="col-lg-3 col-12 col-md-6 mb-4">
           <h3 class="mb-3 text-white1">Subscribe newsletter</h3>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username"
+            <input type="text" class="form-control" maxlength="17" placeholder="Email Address" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn bg text-white1" type="button">
