--- a/GRC-Services.html
+++ b/GRC-Services.html
@@ -492,9 +492,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -558,9 +558,9 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -624,9 +624,9 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -655,9 +655,9 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -772,7 +772,7 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
         <div class="col-lg-3 col-12 col-md-6 mb-4">
           <h3 class="mb-3 text-white1">Subscribe newsletter</h3>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username"
+            <input type="text" class="form-control" maxlength="17" placeholder="Email Address" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn bg text-white1" type="button">
