--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -498,9 +498,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -558,9 +558,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -622,9 +622,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -653,9 +653,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -713,9 +713,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -744,9 +744,9 @@
 
                 <div class="col-9 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-5">
                     <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-                    <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+                    <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name"
                         id="name">
-                    <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+                    <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email"
                         id="email">
 
 
@@ -884,7 +884,7 @@
         <div class="col-lg-3 col-12 col-md-6 mb-4">
           <h3 class="mb-3 text-white1">Subscribe newsletter</h3>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username"
+            <input type="text" class="form-control" maxlength="17" placeholder="Email Address" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn bg text-white1" type="button">
