--- a/buoyspot.html
+++ b/buoyspot.html
@@ -370,8 +370,8 @@
       </div>
       <div class="col-12 bg m-0 border-radious ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-3">
         <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
-        <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name" id="name">
-        <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email" id="email">
+        <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name" id="name">
+        <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email" id="email">
 
 
         <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
@@ -488,15 +488,15 @@
           <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg">
             <div class="col-md-4 col-12">
               <label for="firstName" class="form-label">Name:</label>
-              <input type="text" class="form-control" id="firstName" placeholder="Name" required>
+              <input type="text" class="form-control" id="firstName" maxlength="17" placeholder="Name" required>
             </div>
             <div class="col-md-4">
               <label for="email" class="form-label">Email:</label>
-              <input type="email" class="form-control" id="email" placeholder="Email" required>
+              <input type="email" class="form-control" id="email" maxlength="17" placeholder="Email" required>
             </div>
             <div class="col-md-4">
               <label for="phone" class="form-label">Phone Number:</label>
-              <input id="phone" type="tel" class="form-control phonenum" placeholder="Phone Number">
+              <input id="phone" type="tel" class="form-control phonenum" maxlength="17" placeholder="Phone Number">
             </div>
             <div class="col-md-4">
               <label for="country" class="form-label">Country:</label>
@@ -875,7 +875,7 @@
         <div class="col-lg-3 col-12 col-md-6 mb-4">
           <h3 class="mb-3 text-white1">Subscribe newsletter</h3>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Email Address" aria-label="Recipient's username"
+            <input type="text" class="form-control" maxlength="17" placeholder="Email Address" aria-label="Recipient's username"
               aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn bg text-white1" type="button">
