--- a/GRC-Services.html
+++ b/GRC-Services.html
@@ -476,7 +476,7 @@
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-23.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/Governance_Framework_implementations_banner.png" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
@@ -484,7 +484,7 @@
 
                 <button class="mx-lg-0 mx-auto col-lg-5 col-5 set-bt btn-explore  ">
                     More-Info
-                    <a href="buoylight.html"
+                    <a href="Governance_Framework_implementations.html"
                         class="ex-cion d-flex flex-row align-items-center justify-content-center text-decoration-none">
                         <i class="fa-solid fa-paper-plane"></i>
                     </a>
@@ -542,7 +542,7 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-21.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/ISO_Frameworks_Implementations_banner.jpg" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
@@ -550,7 +550,7 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
 
                 <button class="mx-lg-0 mx-auto col-lg-5 col-5 set-bt btn-explore  ">
                     More-Info
-                    <a href="buoyspot.html"
+                    <a href="ISO_Frameworks_Implementations.html"
                         class="ex-cion d-flex flex-row align-items-center justify-content-center text-decoration-none">
                         <i class="fa-solid fa-paper-plane"></i>
                     </a>
@@ -608,7 +608,7 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-22.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/risk_managment_service_banner.jpg" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
@@ -616,7 +616,7 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
 
                 <button class="mx-lg-0 mx-auto col-lg-5 col-5 set-bt btn-explore  ">
                     More-Info
-                    <a href="buoyspy.html"
+                    <a href="Risk_Management_Services.html"
                         class="ex-cion d-flex flex-row align-items-center justify-content-center text-decoration-none">
                         <i class="fa-solid fa-paper-plane"></i>
                     </a>
