--- a/Governance_Framework_implementations.html
+++ b/Governance_Framework_implementations.html
@@ -391,7 +391,7 @@
         <div class="col-lg-9 ps-lg-3 mt-lg-0 mt-2">
       <span></span>
       <!-- ========================  ======================== -->
-      <img src="Assets/images/Service-Image/Governance_Framework_implementations_service_img_1.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
+      <img src="Assets/images/Service-Image/Governance_Framework_implementations_service_img_1.png" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
       <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5 text-jus ">
