--- a/Risk_Management_Services.html
+++ b/Risk_Management_Services.html
@@ -22,7 +22,8 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>BuoyLIGHT | Intelligent & Cyber Secure Solutions</title>
+  <title>
+    Risk Management Services | Intelligent & Cyber Secure Solutions</title>
   <!-- ======================== intl-tel-input CSS ======================== -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
@@ -326,13 +327,13 @@
 <section>
   <div class="container-fluid  mb-5 home d-flex flex-column align-items-center justify-content-center">
     <!-- =============================== BANNER IMAGE START =========================================== -->
-         <img src="Assets/images/Banner-Image/banner-img-11.png" class="m-0 p-0 w-100 position-absolute  banner-img  " alt="">
+         <img src="Assets/images/Banner-Image/risk_managment_service_banner.png" class="m-0 p-0 w-100 position-absolute  banner-img  " alt="">
 <!-- =============================== BANNER IMAGE END =========================================== -->
 
 <!-- ======================== MAIN SUB DIV START ======================== -->
 <div class="d-flex flex-column align-items-center justify-content-center   pb-0">
- <h2 class="text-white mb-3 display-2 fw-bold">BuoyLIGHT<sup class="col-org">TM</sup> </h2>
- <h4 class="text-white  ">Home / BuoyLIGHT </h4>
+ <h2 class="text-white mb-3 display-4   text-center lh-1">Risk Management Services </h2>
+ <h4 class="text-white fw-lighter ">Home / GRC Services / Risk Management Services </h4>
 </div>
 <!-- ======================== MAIN SUB DIV END ======================== -->
 
@@ -345,16 +346,16 @@
   <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column">
     <!-- ====================== SIDER BAR START  ====================== -->
     <div class="col-lg-3 who p-2 sticky-element border-radious">
-      <h3 class="text-white1 px-2 py-3">AI Product Solution</h3>
+      <h3 class="text-white1 px-2 py-3">GRC Services</h3>
       <!-- ========================  ======================== -->
       <ul class="list-unstyled px-2">
-        <li class="fs-5 text-white1 mb-3"><a href="buoylight.html" class="text-white1 text-decoration-none">buoyLIGHT
-            <sup class="col-org">TM</sup></a></li>
+        <li class="fs-5 text-white1 mb-3"><a href="Risk_Management_Services.html" class="text-white1 text-decoration-none">Risk Management Services
+            </a></li>
 
 
       </ul>
       <div class="col-12 d-flex flex-column px-2 pb-5 product-img">
-        <img src="Assets/images/Service-Image/service-img-06.jpg" class="border-radious img-fluid ser-img-1 " alt="">
+        <img src="Assets/images/Service-Image/Risk_Management_service_img_1.jpg" class="border-radious img-fluid ser-img-1 " alt="">
         <div class="line px-2"></div>
       </div>
       <!-- ========================  ======================== -->
@@ -391,7 +392,7 @@
         <div class="col-lg-9 ps-lg-3 mt-lg-0 mt-2">
       <span></span>
       <!-- ========================  ======================== -->
-      <img src="Assets/images/Service-Image/service-img-13.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
+      <img src="Assets/images/Service-Image/Governance_Framework_implementations_service_img_1.png" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
       <!-- ========================  ======================== -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5 text-jus ">
@@ -454,8 +455,8 @@
       </p>
 
       <div class="col-12 d-flex justify-content-between">
-        <img src="Assets/images/Service-Image/service-img-07.jpg" class="border-radious img-fluid col-6 me-2 " alt="">
-        <img src="Assets/images/Service-Image/service-img-12.jpg" class=" border-radious img-fluid col-6 " alt="">
+        <img src="Assets/images/Service-Image/Governance_Framework_implementations_service_img_2.jpg" class="border-radious img-fluid col-6 me-2 " alt="">
+        <img src="Assets/images/Service-Image/Governance_Framework_implementations_service_img_3.jpg" class=" border-radious img-fluid col-6 " alt="">
 
 
       </div>
