--- a/GRC-Services.html
+++ b/GRC-Services.html
@@ -608,7 +608,7 @@ With accurate compliance reporting and continuous monitoring, we guarantee your 
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Banner-Image/risk_managment_service_banner.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/risk_managment_service_banner.png" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
