--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -486,7 +486,7 @@
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-19.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/Custom_Web_ _App_Development_banner.jpg" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
@@ -546,7 +546,7 @@
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-17.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/Ecommerce_Development_banner.jpg" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
@@ -610,7 +610,7 @@
                     </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-20.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/Cross_Platform_App_Development_banner.jpg" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
@@ -701,7 +701,7 @@
                         to the system in Natural Language. </p>
                 </div>
                 <div class="col-12 mb-3">
-                    <img src="Assets/images/Service-Image/service-img-18.jpg" class="img-fluid rounded-3 col-12" alt="">
+                    <img src="Assets/images/Banner-Image/UIUX_ Design_and_Optimization_banner.png" class="img-fluid rounded-3 col-12" alt="">
                 </div>
             </div>
             <div
