--- a/portfolio.html
+++ b/portfolio.html
@@ -340,9 +340,137 @@
 </section>
   <!-- ======================== MAIN 1 END ======================== -->
 
-<div>
-    <h2 class="text-center">Portfolio</h2>
-</div>
+
+<section>
+    <div
+      class="container-fluid d-flex flex-lg-row  py-5  align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
+      <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
+        <h2 class="strk text-start position-relative">Services
+          &<br> Portfolios</span></h2>
+
+
+      </div>
+      <div class="d-flex justify-content-end col-lg-4 mt-5 mt-lg-0">
+        <h4 class="text-end">Digitalized your Strategies & Redefining Future.</h4>
+      </div>
+    </div>
+  </section>
+  <!-- ======================== SERVICE & PORTFOLIO START ======================== -->
+  <section>
+    <div class="container-fluid d-flex flex-column cardss">
+      <div class="col-lg-12 col-12 my-2 d-flex flex-lg-row flex-column  cardss1">
+        <!-- ================ AI PRODUCT & SOLUTION START   ================-->
+        <div class="col-lg-6 col-12 d-flex flex-row">
+          <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
+
+            <i class="fa-solid fa-robot my-4   d-flex flex-row align-items-center"></i>
+          </div>
+          <div class="col-10 ms-2 py-4">
+
+            <h2 class="d-flex flex-row align-items-center ">AI Products & Solutions</h2>
+            <p class=" col-lg-11 col-12 py-3  paraa-1 fw-normal fs-6 fw-normal fs-6  text-jus">We as team of researchers
+              and consultants develops AI Enabled
+              Proprietory based secured solutions that
+              empowering businesses. It streamline lined operations, helps to enhance decision-making, and moving
+              towards
+              to innovations. Industry oriented solutions to ensure optimal efficiency and scalability.
+            </p>
+            <div class="mx-auto col-12 d-flex flex-row  align-items-center">
+              <button class="mx-1 col-5 set-btn">More-Info
+                <span class="set-btn-hover d-flex flex-row align-items-center justify-content-center">
+                  <a href="Ai-Product-Solution.html" class="col-12">
+
+                    <i class="fa-solid fa-calendar tex">
+
+                    </i>
+                  </a></span>
+              </button>
+
+
+            </div>
+          </div>
+          <div class="cardss-hover">fgfg</div>
+        </div>
+        <!-- ================ AI PRODUCT & SOLUTION END ================ -->
+       
+        <!-- ================ GRC SERVICES  START   ================-->
+        <div class="col-lg-6 col-12 d-flex flex-row mt-lg-5 pt-lg-5">
+          <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
+            <i class="fas fa-balance-scale my-4   d-flex flex-row align-items-center "></i>
+          </div>
+          <div class="col-10 ms-2 py-4">
+
+            <h2 class="d-flex flex-row align-items-center ">GRC Services</h2>
+            <p class="col-lg-11 col-12 py-3  paraa-1 fw-normal fs-6">We are offering GRC (Governance, Risk, and
+              Compliance) services
+              that makes you secured and complainced. Our top notch services, like ISO 27001 (Information Security
+              Management System), ISO 22301 BCM (Business
+              Continuity Management), ISO 31000 RMS (Risk Management) etc. implementations are streamlined your
+              businesses
+              with technological and company policies thats make you effective, efficient and gearing up to the
+              excellence.</p>
+            <div class="mx-auto col-12 d-flex flex-row  align-items-center">
+              <button class="mx-1 col-5 set-btn">More-Info
+                <span class="set-btn-hover d-flex flex-row align-items-center justify-content-center">
+                  <a href="GRC-Services.html" class="col-12">
+
+                    <i class="fa-solid fa-calendar tex">
+
+                    </i>
+                  </a></span>
+              </button>
+
+
+            </div>
+          </div>
+        </div>
+        <!-- ================ GRC SERVICES END ================ -->
+
+      </div>
+
+
+      <div class="col-lg-12 col-12 my-2   cardss1">
+        <div class="col-lg-6 col-12 d-flex flex-row mt-lg-5 pt-lg-3">
+          <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
+            <i class="fa fa-code my-4   d-flex flex-row align-items-center "></i>
+          </div>
+          <div class="col-10 ms-2 py-4">
+
+            <h2 class="d-flex flex-row align-items-center "> AI Driven Web & App Development</h2>
+            <p class=" col-lg-11 col-12 py-3  paraa-1 fw-normal fs-6 ">We have senior team of developers and architects
+              that can enable
+              your websites through cutting-edge AI
+              enabled technlogies that makes your businesses interactive on real-time basis and convert your leads into
+              sales.
+              Whether it would be E-Commerce Solutions, market place websites, web data analytics, converging rate etc.
+              or
+              either AI Enabled Digital Marketing soltutions. We can enable or develop these sort of solutions as per
+              your
+              desire
+              and make you prominent in the business world.
+
+            </p>
+            <div class="mx-auto col-12 d-flex flex-row  align-items-center">
+              <button class="mx-1 col-5 set-btn">More-Info
+                <span class="set-btn-hover d-flex flex-row align-items-center justify-content-center">
+                  <a href="Web-AppDevelopment.html" class="col-12">
+
+                    <i class="fa-solid fa-calendar tex">
+
+                    </i>
+                  </a></span>
+              </button>
+
+
+            </div>
+          </div>
+        </div>
+        <div class="cardss-hover"></div>
+      </div>
+
+    </div>
+  </section>
+  <!-- ======================== SERVICE & PORTFOLIO END ======================== -->
 
   <!-- ======================== OUR PRODUCT START======================== -->
   <section>
