--- a/index.html
+++ b/index.html
@@ -778,8 +778,8 @@
             <div class="col-md-6">
               <input type="email" class="form-control form-control1 " id="email" maxlength="17" placeholder="Your Email" required>
             </div>
-            <div class="col-md-6 pt-2 ">
-              <input id="phone" type="tel" class="mb-3 pt-1 col-12 mb-3 phonenum form-control1">
+            <div class="col-md-6  ">
+              <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control1">
             </div>
             <div class="col-md-12">
               <select class="form-select form-control1" id="queryTopic" aria-label="Default select example">
