--- a/Ai-Product-Solution.html
+++ b/Ai-Product-Solution.html
@@ -6,27 +6,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI Product Solution | Intelligent & Cyber Secure Solutions</title>
-    <!-- ======================== FONT AWEOSEOM ======================== -->
-     <link rel="shortcut icon" href="Assets/images/Logo/Ai-SS-Logo.png" type="image/x-icon">
-
-    <!-- ======================== FONT AWEOSEOM ======================== -->
-
     <!-- ======================== EXTERNEL CSS FILE ======================== -->
-    <link rel="stylesheet" href="CSS/style.css">
-    <!-- ======================== EXTERNEL CSS FILE ======================== -->
+  <link rel="stylesheet" href="CSS/style.css">
 
-    <!-- ======================== Bootstrap CSS ======================== -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- ======================== FONT AWESOME CDN ======================== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- ======================== intl-tel-input CSS ======================== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
-    <!-- ======================== Utils (Optional) ======================== -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
+  <!-- ======================== EXTERNEL CSS FILE ======================== -->
+
+  <!-- ======================== Bootstrap CSS ======================== -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- ======================== FONT AWESOME CDN ======================== -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- ======================== intl-tel-input CSS ======================== -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
+  <!-- ======================== Utils (Optional) ======================== -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
+  <!-- ======================== SWIPER CDN ======================== -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <!-- ======================== SWIPER CDN ======================== -->
+  <!-- ======================== Swiper CSS ======================== -->
+  <link rel="stylesheet" href="https://cdn.jspak vs nzdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 </head>
 
@@ -516,7 +517,7 @@
     <option value="planetSCAN">planetSCAN</option>
 </select>
 
-  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+   <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control1">
   <div class="col-12 text-center  mt-2">
       <button type="submit" class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
           Submit
@@ -585,7 +586,7 @@
     <option value="planetSCAN">planetSCAN</option>
 </select>
 
-  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+   <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control1">
   <div class="col-12 text-center  mt-2">
       <button type="submit" class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
           Submit
@@ -661,7 +662,7 @@
     <option value="planetSCAN">planetSCAN</option>
 </select>
 
-  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+   <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control1">
   <div class="col-12 text-center  mt-2">
       <button type="submit" class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
           Submit
@@ -737,7 +738,7 @@
     <option value="planetSCAN">planetSCAN</option>
 </select>
 
-  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+   <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control1">
   <div class="col-12 text-center  mt-2">
       <button type="submit" class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
           Submit
@@ -809,7 +810,7 @@
     <option value="planetSCAN">planetSCAN</option>
 </select>
 
-  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+   <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control1">
   <div class="col-12 text-center  mt-2">
       <button type="submit" class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
           Submit
@@ -962,18 +963,17 @@
   <!-- ======================== FOOTER END ======================== -->
 
     <!-- ======================== Option 1: Bootstrap Bundle with Popper ======================== -->
+    <!-- ======================== Option 1: Bootstrap Bundle with Popper ======================== -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <!-- ======================== SWIPER CDN ======================== -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <!-- ======================== SWIPER CDN ======================== -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
-    <!-- ======================== EXTERNEL JS FILE ======================== -->
-    <script src="JS/app.js"></script>
-    <!-- ======================== EXTERNEL JS FILE ======================== -->
+  <!-- ======================== EXTERNEL JS FILE ======================== -->
+  <script src="JS/app.js"></script>
+  <!-- ======================== EXTERNEL JS FILE ======================== -->
 
-    <!-- ======================== TELL NO CDN ======================== -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
 </body>
 
 </html>
