--- a/buoylight.html
+++ b/buoylight.html
@@ -375,8 +375,8 @@
         <input type="text" class="form-control my-2 mb-3 col-10" maxlength="17" placeholder="Your Name" name="name" id="name">
         <input type="email" class="form-control mb-2 mb-3 col-10" maxlength="17" placeholder="Your Email" name="email" id="email">
 
-
-        <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+        <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum form-control">
+     
         <div class="col-12 text-center  mt-2">
           <button type="submit"
             class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
