--- a/practice.html
+++ b/practice.html
@@ -49,7 +49,7 @@
         <div class="offcanvas-header container">
             <h5 class="offcanvas-title" id="offcanvasRightLabel">
                 <a class="navbar-brand" href="#">
-                    <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Logo" class="col-lg-2 col-2" />
+                    <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-2" />
                     <!-- ======================== Replace with actual logo path ======================== -->
                 </a>
             </h5>
