--- a/Governance_Framework_implementations.html
+++ b/Governance_Framework_implementations.html
@@ -43,7 +43,7 @@
         <div class="container-fluid d-flex flex-row justify-content-between">
             <!-- ======================== Logo ======================== -->
             <a class="col-lg-3 col-9" href="#">
-                <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Logo" class="col-lg-3 col-2 " id="logo" />
+                <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-3 col-2 " id="logo" />
    
    
             </a>
@@ -149,7 +149,7 @@
             <div class="offcanvas-header container">
                 <h5 class="offcanvas-title" id="offcanvasRightLabel">
                     <a class="navbar-brand" href="#">
-                        <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Logo" class="col-lg-2 col-2" />
+                        <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-2" />
                         <!-- ======================== Replace with actual logo path ======================== -->
                     </a>
                 </h5>
@@ -258,7 +258,7 @@
         <div class="offcanvas-header">
             <!-- ======================== Brand Logo and Close Button ======================== -->
             <div class="d-flex justify-content-between w-100 align-items-center">
-                <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Runok Logo" class="logo" style="width: 50px;">
+                <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
                 <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas"
                         aria-label="Close">
                     <i class="fa fa-window-close bg text-white1 fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -851,7 +851,7 @@
     <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
