--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -46,7 +46,7 @@
     <div class="container-fluid d-flex flex-row justify-content-between">
       <!-- ======================== Logo ======================== -->
       <a class="navbar-brand" href="#">
-             <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Logo" class="col-lg-2 col-2" />
+             <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-2" />
 
       </a>
 
@@ -121,7 +121,7 @@
     <div class="offcanvas-header">
       <!-- ======================== Brand Logo and Close Button ======================== -->
       <div class="d-flex justify-content-between w-100 align-items-center">
-        <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Runok Logo" class="logo" style="width: 50px;">
+        <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Runok Logo" class="logo" style="width: 50px;">
 
         <button type="button" class="bg-transparent border-0 rounded-circle" data-bs-dismiss="offcanvas" aria-label="Close">
           <i class="fa fa-window-close bg text-white fs-5 p-2 rounded-circle" aria-hidden="true"></i>
@@ -231,7 +231,7 @@
     <div class="container-fluid footer-content px-4 py-3">
       <div class="row">
         <div class="col-lg-3  col-12 mb-4">
-          <img src="Assets/images/Logo/Ai-SS-Logo-V3.jpg" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
+          <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Cybron Logo" class="mb-3 col-lg-4 col-3 m-0 p-0">
 
           <p class="locte text-white1 fs-6 ">AI-GRC-Software Development Solution . We Develop Secure & Intelligent
             Solutions</p>
