--- a/index.html
+++ b/index.html
@@ -395,50 +395,48 @@
 
       <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="col-xxl-12 col-xl-12 col-12 mx-auto d-flex justify-content-lg-center flex-column ">
-          <div class="d-flex  text-white col-12 flex-row justify-content-lg-center ">
-            <p class="m-0 p-0 fs-5 fw-light">Welcome Everyone - We are Available at your Service
+          <div class="d-flex  text-white col-12 flex-row justify-content-center ">
+            <p class="m-0 p-0  fw-light mt-4 pt-1 lh-1 text-center">Welcome Everyone - We are Available at your Service
             </p>
           </div>
 
           <h2
-            class="display-2 text-white fw-bolder text-lg-center head-1 col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto">
+            class="display-2 text-white fw-bolder text-center  head-1  col-lg-12 col-xxl-12 col-xl-12 col-12 mx-auto py-3 ">
             AI-GRC-Software
-            Development <span class="text-eni">
-              <span class="text-ani-child">Solution Company</span>
-              Solution Company
-            </span><span class="col-org">.</span>
+            Development Solution Company
+          
           </h2>
 
-          <p class="text-lg-center  d-lg-flex justify-content-center d-none text-white fw-normal">We Develop
+          <p class="text-center  d-lg-flex justify-content-center text-white fw-light">We Develop
             Secure
             & Intelligent Solutions </p>
         </div>
     
 
-          <div class="col-lg-12 text-white1 pt-lg-5 mt-lg-5 col-12  d-flex flex-lg-row flex-column justify-content-between mt-lg-0 ">
+          <div class="col-lg-12 text-white1   mt-lg-5 col-12  d-flex flex-lg-row flex-column justify-content-between mt-lg-0 ">
 
-            <div class=" col-lg-2 col-5 d-flex   justify-content-center align-items-center flex-column">
-              <button class="banner-btn1  ">
-                <span class="banner-btn  ">Explore Our Services</span>
-                <span class="banner-btn-hover ">
-                  <a href="Ai-Product-Solution.html"><i class="fa-solid fa-paper-plane col-org"></i></a>
-                </span>
-              </button>
+            <div class=" col-lg-2 col-12 d-flex   justify-content-center align-items-center flex-column">
+              <button type="submit" 
+              class="mt-3 mx-auto who text-white1 fw-light btn3 fs-6 px-3 text-dark text-capitalize bg-white p-2 d-flex flex-row align-items-center justify-content-center">
+              Explore Our Service
+           <a href="Ai-Product-Solution.html">
+            <i class="fa-solid fa-paper-plane icon-hover"></i>
 
-
+           </a>
+            </button>
 
 
 
 
             </div>
             <div class="col-lg-5 d-flex flex-column   align-items-end col-12 text-end py-lg-0 py-3">
-              <p class="color-black text-capitalize fs-6 fw-light">
+              <p class="color-black text-capitalize  fw-light lh-sm">
                 AI-System-Soft Provide business solutions pertain to the <span class="fw-bolder">GRC (Governance, Risk,
                   and
                   Compliance)</span> AI driven software, application & development and information security Solutions.
               </p>
-              <p class="pb-g p-2 col-5 rounded-3 bg">
-                Cleint Satisfaction - 90%
+              <p class="pb-g p-2 col-lg-5 rounded-3 bg">
+                Cleint Satisfaction - 100%
               </p>
 
             </div>
