--- a/practice.html
+++ b/practice.html
@@ -44,7 +44,7 @@
 
     <!-- ======================== MOBILE NAVBAR START ======================== -->
     <nav>
-        <div class="offcanvas offcanvas-end offcanvas-top1 who " tabindex="-1" id="offcanvasRight"
+        <div class="offcanvas offcanvas-end offcanvas-top1 who show" tabindex="-1" id="offcanvasRight"
             aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header container">
                 <h5 class="offcanvas-title" id="offcanvasRightLabel">
