--- a/practice.html
+++ b/practice.html
@@ -59,7 +59,7 @@
                     <i class="fa-solid fa-xmark text-white fs-1"></i>
                 </button>
             </div>
-            <div class="offcanvas-body container">
+            <div class="offcanvas-body topoff container">
                 <ul class="navbar-nav off_canvas_nav" id="off_canvas_nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
@@ -106,7 +106,7 @@
                     <i class="fa-solid fa-xmark text-white fs-1"></i>
                 </button>
             </div>
-            <div class="offcanvas-body container">
+            <div class="offcanvas-body topoff container">
                 <div class=" col-12">
                     <ul class="navbar-nav off_canvas_nav me-auto mt-2 mb-lg-0" id="off_canvas_nav">
                
