--- a/practice.html
+++ b/practice.html
@@ -45,16 +45,14 @@
 
     <!-- ======================== MOBILE NAVBAR START ======================== -->
     <nav>
-        <div class="offcanvas offcanvas-end offcanvas-top1 who " tabindex="-1" id="offcanvasMain"
+        <div class="offcanvas offcanvas-end offcanvas-top1 who show" tabindex="-1" id="offcanvasMain"
             aria-labelledby="offcanvasMainLabel">
             <div class="offcanvas-header container">
                 <h5 class="offcanvas-title">
-                    <h5 class="offcanvas-title">
-                        <a class="navbar-brand" href="#">
-                            <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-2" />
+                        <a class="navbar-brand " href="#">
+                            <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-4" />
                         </a>
-                    </h5>
-                </h5>
+                   </h5>
                 <button type="button" class="text-white bg-transparent border-0" data-bs-dismiss="offcanvas">
                     <i class="fa-solid fa-xmark text-white fs-1"></i>
                 </button>
@@ -98,16 +96,16 @@
             aria-labelledby="offcanvasServiceLabel">
             <div class="offcanvas-header container">
                 <h5 class="offcanvas-title">
-                    <a class="navbar-brand" href="#">
-                        <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-2" />
+                    <a class="navbar-brand " href="#">
+                        <img src="Assets/images/Logo/Ai-SS-Logo.png" alt="Logo" class="col-lg-2 col-4" />
                     </a>
-                </h5>
+               </h5>
                 <button type="button" class="text-white bg-transparent border-0" data-bs-dismiss="offcanvas">
                     <i class="fa-solid fa-xmark text-white fs-1"></i>
                 </button>
             </div>
-            <div class="offcanvas-body topoff container">
-                <div class=" col-12">
+            <div class="offcanvas-body topoff">
+                <div class=" col-12 ">
                     <ul class="navbar-nav off_canvas_nav me-auto mt-2 mb-lg-0" id="off_canvas_nav">
                
                         <li class="nav-item dropdown-submenu">
@@ -141,8 +139,8 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown-submenu">
-                            <a class="dropdown-item btn dropdown-toggle d-flex justify-content-between align-items-center dropdown-toggle nav-link" href="#" role="button"   data-bs-toggle="dropdown" aria-expanded="false">AI
-                                Driven Web & App Development</a>
+                            <a class=" lh-1 fs-6 text-start btn dropdown-toggle d-flex justify-content-between align-items-center dropdown-toggle nav-link" href="#" role="button"   data-bs-toggle="dropdown" aria-expanded="false">AI
+                                Driven Web & App  <br> Development</a>
                             <ul class="dropdown-menu  list-unstyled child-dropdown">
                                 <li><a class="dropdown-item" href="buoylight.html">
                                         Custom Web & App Development</a></li>
