--- a/practice.html
+++ b/practice.html
@@ -105,10 +105,10 @@
                 </button>
             </div>
             <div class="offcanvas-body topoff">
+                <h2 class="text-white">Services</h2>
                 <div class=" col-12 ">
                     <ul class="navbar-nav off_canvas_nav me-auto mt-4 mb-lg-0" id="off_canvas_nav">
-                        <h2 class="text-white">Services</h2>
-                        <li class="nav-item dropdown-submenu py-3">
+                        <li class="nav-item dropdown-submenu pb-3">
                             <a class="btn nav-link dropdown-toggle d-flex justify-content-between align-items-center"
                                 href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Ai Product Solution
