--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
   <header>
     <!-- ======================== NAVBAR START ======================== -->
-    <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
+    <nav class="navbar large_nav navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
         <div class="container-fluid d-flex flex-row justify-content-between">
             <!-- ======================== Logo ======================== -->
             <a class="col-lg-2 col-5" href="#">
