--- a/header.html
+++ b/header.html
@@ -63,7 +63,8 @@
                                                   Governance Framework <br> implementations</a></li>
                                             <li><a class="dropdown-item" href="buoyspot.html">
                                                 ISO Frameworks Implementations</a></li>
-                                             <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a></li>
+                                             <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a><li><a class="dropdown-item" href="maturity_assesment.html">Maturity Assesment</a></li>
+                                        <li><a class="dropdown-item" href="gap_analysis_and_assement.html">Gap Analysis & Assement</a></li>
                                             
                                           </ul>
                                 </li>
@@ -171,7 +172,8 @@
                                                 Governance Framework <br> implementations</a></li>
                                             <li><a class="dropdown-item" href="buoyspot.html">
                                                 ISO Frameworks Implementations</a></li>
-                                             <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a></li>
+                                             <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a><li><a class="dropdown-item" href="maturity_assesment.html">Maturity Assesment</a></li>
+                                        <li><a class="dropdown-item" href="gap_analysis_and_assement.html">Gap Analysis & Assement</a></li>
                                             
                                           </ul>
                                 </li>
