--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,8 @@
                                               Governance Framework <br> implementations</a></li>
                                         <li><a class="dropdown-item" href="ISO_Frameworks_Implementations.html">
                                             ISO Frameworks Implementations</a></li>
-                                        <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a></li>
+                                        <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk Management Services</a><li><a class="dropdown-item" href="maturity_assesment.html">Maturity Assesment</a></li>
+                                        <li><a class="dropdown-item" href="gap_analysis_and_assement.html">Gap Analysis & Assement</a></li>
                                         
                                       </ul>
                             </li>
@@ -225,7 +226,10 @@
                           <li><a class="dropdown-item" href="ISO_Frameworks_Implementations.html">
                                   ISO Frameworks Implementations</a></li>
                           <li><a class="dropdown-item" href="Risk_Management_Services.html">Risk
-                                  Management Services</a></li>
+                                  Management Services</a></li>                                    
+    <li><a class="dropdown-item" href="maturity_assesment.html">Maturity Assesment</a></li>
+                                        <li><a class="dropdown-item" href="gap_analysis_and_assement.html">Gap Analysis & Assement</a></li>
+                                      
 
                       </ul>
                   </li>
