--- a/UX_Design_and_Optimization.html
+++ b/UX_Design_and_Optimization.html
@@ -13,6 +13,7 @@
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
   <link rel="stylesheet" href="CSS/style.css">
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
+<meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png">
 
   <!-- ======================== Bootstrap CSS ======================== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
