--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
     <!-- ======================== EXTERNEL CSS FILE ======================== -->
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css"> <!-- ======================== EXTERNEL CSS FILE ======================== --><meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png"> 
 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
 
