--- a/practice.html
+++ b/practice.html
@@ -11,7 +11,7 @@
     <!-- ======================== FONT AWEOSEOM ======================== -->
     <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
     <!-- ======================== EXTERNEL CSS FILE ======================== -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css"> <!-- ======================== EXTERNEL CSS FILE ======================== --><meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png"> 
 
     <!-- ======================== EXTERNEL CSS FILE ======================== -->
 
