--- a/buoyspot.html
+++ b/buoyspot.html
@@ -11,7 +11,7 @@
   <!-- ======================== FONT AWEOSEOM ======================== -->
 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css"> <!-- ======================== EXTERNEL CSS FILE ======================== --><meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png"> 
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
 <!-- Twitter Card type -->
 <meta name="twitter:card" content="summary_large_image">
