--- a/getqoutes.html
+++ b/getqoutes.html
@@ -9,7 +9,7 @@
     <!-- ======================== FONT AWEOSEOM ======================== -->
   
     <!-- ======================== EXTERNEL CSS FILE ======================== -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css"> <!-- ======================== EXTERNEL CSS FILE ======================== --><meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/Ai-SS-Logo.png"> 
     <!-- ======================== EXTERNEL CSS FILE ======================== -->
   
     <!-- ======================== Bootstrap CSS ======================== -->
