--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -27,7 +27,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- ======================== SWIPER CDN ======================== -->
   <!-- ======================== Swiper CSS ======================== -->
-  <link rel="stylesheet" href="https://cdn.jspak vs nzdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 
 </head>
 
