--- a/portfolio.html
+++ b/portfolio.html
@@ -621,9 +621,33 @@
 
 
     </div>
-    <p class="mb-0 mx-auto   pb-3 text-white1 container bg rounded-3 border-0   p-3  text-center bottom-footer ">© 2024
+    
+<div class="container mb-0 mx-auto d-flex flex-lg-row flex-column justify-content-between align-items-center  text-white1  bg rounded-3 border-0   p-3  text-center bottom-footer">
+ 
+    <nav>
+     <ul class="nav nav_of_footer flex-row  gap-lg-3 text-white justify-content-lg-start justify-content-center ">
+  <li class="nav-item">
+    <a class="nav-link " href="privacy.html">Privacy</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link " href="sitemap.html">Sitemap</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link " href="terms-of-use.html">Terms of Use</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link " href="purchasing-terms.html">Purchasing Terms</a>
+  </li>
+</ul>
+
+    </nav>
+    <hr class="d-flex w-100 d-lg-none">
+ <div class="d-flex flex-row align-items-center ">
+   <h6 class="d-flex flex-row align-items-center copyright_footer mt-2">© 2024
       AiSystemSoft
-      All Rights Reserved</p>
+      All Rights Reserved</h6>
+ </div>
+</div>
   </footer>
     <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
   <!-- ======================== FOOTER END ======================== -->
