--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -26,17 +26,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
- <!-- ======================== intl-tel-input CSS ======================== -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
- <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
- <!-- ======================== Utils (Optional) ======================== -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
 
-  <title>Contact Us | Intelligent & Cyber Secure Solutions</title>
+  <title>Privacy | Intelligent & Cyber Secure Solutions</title>
 </head>
 
 <body>
- 
+
   <!-- ======================== HEADER START ======================== -->
 
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
@@ -347,196 +342,55 @@
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
 
   <!-- ======================== HEADER END ======================== -->
-    
-<!-- ======================== MAIN 1 START ======================== -->
+
+    <!-- ======================== MAIN 1 START ======================== -->
 <section>
-  <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center">
-   <!-- =============================== BANNER IMAGE START =========================================== -->
- <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0  p-0 w-100 position-absolute banner-img " alt="">
-    <!-- =============================== BANNER IMAGE END =========================================== -->
-   
+  <div class="container-fluid home  mb-5 d-flex flex-column align-items-center justify-content-center">
+    <img src="Assets/images/Banner-Image/privacy_banner.jpg" class="m-0  p-0 w-100 position-absolute banner-img " alt="">
+  
   <!-- ======================== MAIN SUB DIV START ======================== -->
   <div class="d-flex flex-column justify-content-center align-items-center">
   <div class="col-12 text-white ">
-    <h2 class=" display-3 text-center">Contact-Us</h2>
-    <h5 class="text-center">Home - Contact </h5>
+    <h2 class=" display-3 text-center">Privacy</h2>
+    <h5 class="text-center">Home - Privacy</h5>
   </div>
   </div>
   <button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
     <li>AI Product Solution</li>
-  </button>  
+</button>  
   <!-- ======================== MAIN SUB DIV END ======================== -->
   
    </div>
 </section>
- <!-- ======================== MAIN 1 END ======================== -->
-<!-- ======================== MAP START ======================== -->
-<section>
-  <div class="container-fluid m-0 p-0 ">
-    <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.530119805925!2d-81.51001662389079!3d28.493694175740895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ed1863281cf%3A0x80aa2af03e1c4035!2sConroy%20Rd%2C%20Windermere%2C%20FL%2034786%2C%20USA!5e0!3m2!1sen!2s!4v1739033535734!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-   </div>
-</section>
-<!-- ======================== MAP END ======================== -->
-  <!-- ======================== CONTACT-US START ======================== -->
-  <section>
-    <div
-      class="container-fluid d-flex flex-lg-row py-5   text-white1 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
-      <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
-        <h2 class="strk text-start position-relative ">Contact
-          Us</span></h2>
+  <!-- ======================== MAIN 1 END ======================== -->
 
 
-      </div>
-      <div class="d-flex text-dark1 justify-content-end col-lg-4 mt-5 mt-lg-0">
-        <h4 class="text-end text-capitalize">Establish Trust</h4>
-      </div>
-    </div>
-    <div class="container-fluid m-0 who py-4 d-flex flex-column align-items-center">
+<!-- =============== PRIVACY CONTENT START ======================== -->
+ <section>
+    <div class="container">
+        <h3>1 Introduction</h3>
+<p>PECB respects each site visitor’s right to privacy. We collect and use information from our websites only as disclosed in this privacy statement. This privacy statement applies to and discloses the privacy practices of information collected by PECB only. If you disagree with any part of this privacy statement, please do not use our websites.</p>
+<p>Hereafter, the terms “PECB” and “we” and its derivatives refer to the owner of the websites (office located in 336-6683 Jean Talon St E Montreal QC H1S 0A5 Canada). The term “you” and its derivatives refers to the user or viewer of our website. The term “statement” refers to this document. The terms “PECB website” or simply “website” refer to the websites https://pecb.com/, https://insights.pecb.com/, https://conference.pecb.com/, https://store.pecb.com/, https://help.pecb.com/, https://mypecb.com/ and/or other domains owned and maintained by PECB.</p>
+<p>PECB is the data controller of the information you provide during the process of application, registration, certification, examination, or other purposes as outlined in this privacy statement.</p>
+<p>Any details entered in one of our online forms will be stored electronically by us. If you have any questions about the process or the way your information is handled, please contact our data protection officer via email at <a href="mailto:information.security@pecb.com">information.security@pecb.com</a>.</p>
 
+<h3>2 Website content</h3>
+<p>The content of the PECB website is intellectual property protected by law. The information and content provided may not be re-used without our explicit permission, except for private or other personal use within the limitations of the General Data Protection Regulation (GDPR). The press releases and articles from our press service presented on the website are available to the editors of newspapers or periodicals for publication. Should they be published, PECB will request the publisher to provide a proof copy.</p>
+<p>This privacy statement does not cover any link within the PECB website that leads to websites not owned or operated by PECB. We have no authority or responsibility over the content or design of other companies’ websites that can be assessable via hyperlinks from our website. Furthermore, we explicitly disassociate from any internet content that might be illegal or offensive. You take full responsibility for using hyperlinks on our website to access other companies’ websites. We recommend that you check the policies concerning data protection and privacy of the PECB partners or other users whose websites can be accesses through our website.</p>
+<p>PECB is not responsible for any outcome caused by opening or otherwise engaging with the website(s) of our partners. The partners’ hyperlinks and addresses provided on our website are generated automatically (geographical location and contact) in accordance with the partners’ physical address.</p>
 
-      <h2 class="fs-1  text-white1">Let’s Plan Together</h2>
-      <p class="col-text fs-6 py-4 fw-normal locte  text-white1">
-        Design, Architect, Develop & Automate your business processes through AI. Increase your business
-        productivity!</span></p>
-      <div class="d-flex flex-lg-row flex-column container-fluid px-5 gap-2">
+<h3>3 Lawful Basis for Processing</h3>
+<p>We collect personally identifiable information (PII) only with the consent of the natural person (data subject) and ensure that the data collected is used only for the stated purpose.</p>
+<p>In addition, when you create an account and become a PECB client, partner, trainer, auditor, invigilator, or distributor, you are required to fill out an electronic form for which we are not held responsible. We ask for your consent to send you information only regarding our training courses, news, newsletters, webinars, or other content related to our services.</p>
 
-
-        <div
-          class="col-lg-4 col-12 my-2 borders p-2 rounded-3 d-flex  flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-          <i class="fa-solid fa-location-dot bg fs-4 mt-2 bg-col text-white1 p-3  rounded"></i>
-
-
-          <h5 class="mt-2  ps-lg-2 text-white fw-light">Location</h5>
-          <span class="col-text locte text-white fw-light text-center ps-lg-2  text-center">
-            P. O. Box 409, 9300 Conroy
-            Windermere, Windermere, FL-34786, USA</span>
-
-
-        </div>
-
-        <div
-          class="col-lg-4 col-12 my-2 borders p-2 rounded-3 text-white1 d-flex  flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-
-          <i class="fa-solid fa-headset bg fs-4 mt-2 bg-col text-white1 p-3 rounded"></i>
-
-          <h5 class="mt-2">Support</h5>
-          <span class="col-text locte ps-lg-2 text-lg-start text-center">
-            + 1 (689) 276-4636</span>
-
-
-        </div>
-        <div
-          class="col-lg-4 col-12 my-2 borders p-2 rounded-3 text-white1 d-flex  flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-
-
-          <i class="fa-solid fa-envelope fs-4 mt-2 bg text-white1 p-3 rounded"></i>
-          <h5 class="mt-2">Email</h5>
-          <span class="col-text locte ps-lg-2 text-lg-start text-center ">
-            info@aisystemsoft.com
-          </span>
-
-        </div>
-
-
-      </div>
-
+<h3>4 Types of Collected Information</h3>
+<p>We only collect the information that you provide to us when you visit our website.</p>
+<p>The provision of information to PECB is a voluntary act. Clicking the “Submit” button on any of our web forms on our website means that you are aware of the PECB’s Terms, Conditions, and Policy provisions and voluntarily consent to the conditions outlined therein.</p>
 
     </div>
-    <div class="container-fluid who m-0 d-flex flex-lg-row flex-column justify-content-between   pt-5 contact-page">
-      <div class="col-lg-6">
-        <img src="Assets/images/Pictures/co.jpg" class="img-fluid col-12 contact_image" alt="">
-      </div>
+ </section>
+ <!-- ============== PRIVANCY CONTENT END =========================== -->
 
-      <div class="col-lg-6 bg1 py-5 col-12 d-flex flex-column align-items-start  formm px-4">
-        <h4 class="text-white1 text-end col-12 pb-3">For Any Assitance –<br>Kindly Provide Your Information</h4>
-        <!-- CONTACT FORM START -->
-        <form class="mt-5" id="form">
-          <div class="row g-3">
-            <div class="col-md-6">
-              <input type="text" class="form-control form-control1" id="firstName" maxlength="17" placeholder="First Name" required>
-            </div>
-            <div class="col-md-6">
-              <input type="text" class="form-control form-control1" id="lastName" maxlength="17" placeholder="Last Name" required>
-            </div>
-
-
-            <div class="col-md-6">
-              <input type="email" class="form-control form-control1 " id="email" maxlength="17" placeholder="Your Email" required>
-            </div>
-            <div class="col-md-6 pt-2 ">
-              <input id="phone" type="tel" class="mb-3 pt-1 col-12 mb-3 phonenum form-control1">
-            </div>
-            <div class="col-md-12">
-              <select class="form-select form-control1" id="queryTopic" aria-label="Default select example">
-
-                <option value="AI Products & Solutions">AI Products & Solutions</option>
-                <option value="GRC Services">GRC Services</option>
-                <option value="AI Driven  Web & App Development">AI Driven Web & App Development</option>
-
-
-              </select>
-
-            </div>
-            <div class="col-12">
-              <textarea class="form-control form-control1" id="message" rows="4"
-                maxlength="17" placeholder="Write your message here..."></textarea>
-            </div>
-            <div class="col-12 text-center mb-5">
-              <button type="submit" id="contact-form"
-                class="mt-3 mx-auto who text-white1 btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                SEND NOW
-                <i class="fa-solid fa-paper-plane icon-hover"></i>
-
-              </button>
-            </div>
-          </div>
-        </form>
-        <!-- CONTACT FORM END -->
-      </div>
-
-
-    </div>
-
-  </section>
-  <!-- ======================== CONTACT-US END ======================== -->
-
-
-  <!-- ======================== OUR PRODUCT START======================== -->
-<section>
-  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
-    <div class="d-flex flex-row justify-content-center flex-column">
-  <h4 class="text-white float-start">Our Major Product</h4>
-   <swiper-container class="mySwiper container bg-white"  slides-per-view="3" autoplay-delay="1500"
-      space-between="30" free-mode="true">
-      <swiper-slide><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-4 " alt="automan"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4" alt="buoylight"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4" alt="buoyspot"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4" alt="callmatics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4" alt="carmatics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4" alt="facematics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4" alt="inteliOCR"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4" alt="iport"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
-
-      <swiper-slide><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
-
-      <swiper-slide><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4" alt="medbot"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4" alt="meddroid"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4" alt="mediatalks"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4" alt="facematics"></swiper-slide>
-      <swiper-slide><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4" alt="inteliOCR"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4" alt="iport"></swiper-slide>
-      <swiper-slide> <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4" alt="mallmatics"></swiper-slide>
-    </swiper-container>
-  <div class="col-12">
-  <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
-</div>
-</div>
-    
-  </div>
-</section>
-  <!-- ======================== OUR PRODUCT END======================== -->
   <!-- ======================== FOOTER START ======================== -->
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
   <footer class=" footer pt-5 py-3">
